# bmfont_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  font.fnt
.github/workflows/: rust.yml
data/: med.xml  small.txt  small.xml
data/bad/: duplicate_key.txt  invalid_char_count.txt  invalid_charset_string.txt  invalid_kerning_count.txt  invalid_tag.json  invalid_tag.txt  invalid_tag.xml  invalid_value.txt  no_common.txt  no_info.txt
data/examples/: README.md  anton_latin.fnt
data/ok/: empty.json  empty.txt  empty.xml  med.json  med.txt  medium.json  medium.txt  medium.xml  small.json  small.txt
examples/: binary.rs  binary_to_text.rs  json.rs  render.rs  text.rs  xml.rs
src/: charset.rs  error.rs  font.rs  lib.rs  settings.rs
src/binary/: bits.rs  constants.rs  impls.rs  load.rs  mod.rs  pack.rs  store.rs
src/builder/: attributes.rs  font.rs  load.rs  mod.rs  tags.rs
src/json/: load.rs  mod.rs  store.rs
src/parse/: mod.rs
src/tagged_attributes/: mod.rs
src/tests/: mod.rs
src/text/: load.rs  mod.rs  store.rs
src/util/: mod.rs
src/xml/: load.rs  mod.rs  store.rs
