[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"] 
description = """
Load/ save/ manipulate BMFont files
""" 
documentation = "https://docs.rs/bmfont_rs" 
edition = "2018" 
exclude = ["data/*"] 
homepage = "https://github.com/shampoofactory/bmfont_rs" 
keywords = ["bmfont", "font", "bitmap"] 
license = "MIT OR Apache-2.0" 
name = "bmfont_rs" 
readme = "README.md" 
repository = "https://github.com/shampoofactory/bmfont_rs" 
version = "0.1.0" # remember to update READMEs

[features]
serde_boolint = []
xml = ["roxmltree"]

[profile.test]
opt-level = 3

[dependencies]
roxmltree = {version = "0.14.1", optional = true}
serde = {version = "1.0", optional = true, features = ["derive"]}

[dev-dependencies]
image = "0.23.14"
serde_json = "1.0.67"
