[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"] 
description = """
Load/ save/ manipulate BMFont files
""" 
documentation = "https://docs.rs/bmfont_rs" 
edition = "2018" 
exclude = ["data/*"] 
homepage = "https://github.com/shampoofactory/bmfont_rs" 
keywords = ["bmfont", "font", "bitmap"] 
license = "MIT OR Apache-2.0" 
name = "bmfont_rs" 
readme = "README.md" 
repository = "https://github.com/shampoofactory/bmfont_rs" 
version = "0.3.1" # remember to update READMEs

[features]
xml = ["roxmltree"]
json = ["serde_json", "serde"]

[profile.test]
opt-level = 3

[dependencies]
roxmltree = {version = "0.20.0", optional = true}
serde_json = {version = "1.0.138", optional = true}
serde = { version = "1.0.217", optional = true, features = ["derive"]}

[dev-dependencies]
image = "0.23.14"
